# rust-pesel-checker

./: Cargo.toml
src/: digit_vec.rs  lib.rs  main.rs  pesel.rs
