[package]
name = "pesel"
version = "0.1.0"
authors = ["Konrad Balcerzak <kobdi4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pesel_lib"
path = "src/lib.rs"

[[bin]]
name = "pesel_main"
path = "src/main.rs"

[dependencies]
