[package]
name = "pesel"
version = "0.1.0"
authors = ["Konrad Balcerzak <kobdi4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pesel_lib"
path = "src/lib.rs"

[[bin]]
name = "pesel"
path = "src/main.rs"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
chrono = "0.4"